tests/integration/errors/generic_wrong_type_arg_count.rsg
// TEST: compile_error
// EXPECT-ERROR: wrong number of type arguments
// v0.8.0 — Error: wrong number of type arguments
module test_err

fn id<T>(x: T) -> T {
    x
}

fn main() {
    id<i32, str>(42)
}
